RESOLVED FIXED227035
iOS - VoiceOver reads incorrectly in content editable element if role="document".
https://bugs.webkit.org/show_bug.cgi?id=227035
Summary iOS - VoiceOver reads incorrectly in content editable element if role="docume...
Andres Gonzalez
Reported 2021-06-15 10:29:27 PDT
iOS - VoiceOver reads incorrectly in content editable element if role=“document”.
Attachments
Patch (8.82 KB, patch)
2021-06-15 10:50 PDT, Andres Gonzalez
no flags
Radar WebKit Bug Importer
Comment 1 2021-06-15 10:29:44 PDT
Andres Gonzalez
Comment 2 2021-06-15 10:34:45 PDT
Andres Gonzalez
Comment 3 2021-06-15 10:50:28 PDT
EWS
Comment 4 2021-06-15 15:06:24 PDT
Committed r278907 (238841@main): <https://commits.webkit.org/238841@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 431456 [details].
Note You need to log in before you can comment on or make changes to this bug.